# act

./: .gitignore  Cargo.toml  LICENSE  README.md  build  comb.act  comms.act  factorial.S  factorial.act  fizzbuzz.act  grammar.bnf  grammar.md  lines.txt  nothing.act  src.fish  sum.S  sum.act  sums.rs  testing.S  testing.act  together.act  typesystem.md  typing.act
act/: Cargo.toml  build  factorial.S  ftoa.c  options.txt  sum.act
act/notes/: grammar.md  semantics.md
act/src/: codegen.rs  cranegen.rs  cranegen.rs.bak  cst.rs  main.rs  tokenise.rs
act/src/frontend/: cst.rs  cst.rs.bak  cst_typed.rs  mod.rs  tokenise.rs  typecheck.rs
actrt/: Cargo.toml  build  src.fish  test.S
actrt/src/: gc.rs  gc.rs.bak  gc_new.rs  lib.rs  runtime.rs  runtime_new.rs
actrt/src/take2/: gc.rs  mod.rs  runtime.rs
src/: lib.rs  main.rs
src/compiler/: cranegen.rs  mod.rs
src/compiler/frontend/: cst.rs  mod.rs  tokenise.rs  typecheck.rs
src/runtimelib/: gc.rs  mod.rs  runtime.rs
