[package]
name = "act"
version = "0.7.0"
edition = "2021"

[lib]
crate-type=["staticlib"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.35", features = ["derive"] }
cranelift = { version = "0.118.0", features = ["module", "object", "native"] }
parking_lot = "0.12.3"
rayon = "1.10.0"
